tests/fixtures/errors/syntax-error/src/bad.js
const x = {{{
// Unclosed braces
function test() {
    return "incomplete